[package]
name = "vcnl36825t-rs"
version = "0.1.2"
authors = ["Axel Chabot <axel.chabot@lefrenchpoc.fr>"]
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["proximity-sensor", "vcnl36825t"]
description = "Vishay VCNL36825T proximity sensor driver for embedded-hal i2c traits"
documentation = "https://docs.rs/vcnl36825t-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/LeFrenchPOC/vcnl36825t-rs"
edition = "2021"

[dependencies]
device-driver = "0.7.0"
embedded-hal = "1.0.0"
num_enum = { version = "0.7.3", default_features = false }
